--- a/microservices/security-demo/src/main/resources/application.properties
+++ b/microservices/security-demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=security-demo
 server.port=7000
 
-spring.security.user.name=shreyansh
-spring.security.user.password=praveen
+#spring.security.user.name=shreyansh
+#spring.security.user.password=praveen
 
